--- a/src/css/darkmode.css
+++ b/src/css/darkmode.css
@@ -26,3 +26,6 @@
      background-color: rgba(255, 255, 255, 0.014);
      border-radius: 25px;
  }
+ /*  .overlay {
+     background-color: rgba(60, 173, 7, 0.932);
+ } */
