--- a/src/css/style.css
+++ b/src/css/style.css
@@ -885,7 +885,7 @@ input[type="checkbox"] {
 .policy__print {
     width: 8.2cm;
     height: 5cm;
-    background-color: #a5a5a5;
+    /*   background-color: #a5a5a5; */
     font-size: 12px;
     text-transform: uppercase;
 }
