--- a/src/css/style.css
+++ b/src/css/style.css
@@ -169,7 +169,7 @@ img {
     font-size: 14px;
 }
 
-input:not(input[type="checkbox"]),
+input:not(input[type="checkbox"],input.swal2-input) ,
 select {
     width: 100%;
     height: 35px;
@@ -189,6 +189,7 @@ input:not(input[type="checkbox"]) {
     box-shadow: 3px 3px 3px #ffffff27, 3px 3px 3px #5757573f;
     border-radius: 5px;
 }
+ 
 
 .form__input__control--check {
     display: grid;
